Fixed a problem where the admin dash wouldn't show when viewing your profile as an admin. Fixed the poorly readable alternate text on the login and register screens

--- a/app/css/login.less
+++ b/app/css/login.less
@@ -24,7 +24,7 @@
 
     a {
         font-size: 12px;
-        color: white;
+        color: black;
     }
 }
 
